2004-07-02  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix kernel hang on mkfifo under 2.4 kernels (spotted and patch
	by Mattias Wadman)

	* Added option for direct read/write (-r)

	* Fix revalidate time setting for newly created inodes

2004-07-01  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Change passing fuse include dir to 2.6 kernel make system more
	robust (hopefully fixes problems seen on SuSE 9.1)

2004-06-30  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Acquire inode->i_sem before open and release methods to prevent
	concurrent rename or unlink operations.

	* Make __fuse_read_cmd() read only one command.  This allows
	multiplexing the fuse file descriptor with other event sources
	using select() or poll() (patch by Jeff Harris)

	* Export 'exited' flag with __fuse_exited() (patch by Jeff Harris)

2004-06-27  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix file offset wrap around at 4G when doing large reads

2004-06-24  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix memory leak in open (Valient Gough)

2004-06-24  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Add "close after delete" support to libfuse (patch by Valient
	Gough)

	* Cancel all worker threads before exit in multithreaded mode

2004-06-23  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix locking bugs

	* Don't send reply to RELEASE

	* Work with newer libtool (1.5a)

	* Check for st_atim member of struct stat
	
2004-06-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* No request allocation needed on inode and file release
	
2004-06-21  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix possible inode leak in userspace in case of unfinished
	lookup/mknod/mkdir/symlink/link operation.
	
2004-06-20  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix some races and cleanups in fuse_read_super()
	
2004-06-19  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Requests are allocated at open time
	
2004-06-03  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Build shared library as well as static (using libtool)
